objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>CVL__Loy_Pay_by_Points__c</fullName>
        <formula>IF(CVL__Point_Type__c != &apos;&apos; &amp;&amp; CVL__Member_s_Point__c &gt;= CVL__Loy_Total_Point_Price_Calc__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay by Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVL__Loy_Point_Field__c</fullName>
        <label>Point Field</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVL__Loy_Point_Pay__c</fullName>
        <label>Point Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVL__Loy_Total_Point_Pay_Calc__c</fullName>
        <formula>CVL__Loy_Point_Pay__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Point Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVL__Loy_Total_Point_Price_Calc__c</fullName>
        <formula>CVL__Point_Price__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Point Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVL__Member_s_Point__c</fullName>
        <label>Member`s Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVL__Point_Price__c</fullName>
        <label>Point Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVL__Point_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point Product</label>
        <referenceTo>CVL__Loy_Point_Product__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CVL__Point_Type__c</fullName>
        <label>Point Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>